--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-cython-bbox==0.1.3
+Cython
+cython-bbox
 filelock
 filterpy
 h5py
@@ -23,3 +24,4 @@ thop
 tqdm
 visualdl>=2.2.0
 paddlepaddle-gpu
+yolox
